<resources>
    <string name="app_name">Green Book</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="upload_image_link">Upload Image</string>

    <string name="skip">skip</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="signup">Sign up</string>
    <string name="username_hint">Enter your full name</string>
    <string name="confirm_password_hint">Confirm Password</string>
    <string name="login_error">Invalid Username and Password</string>
    <string name="ok_btn_dialog">Ok</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_password_not_match">The two passwords not matched</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_email_required">Email address is required</string>
    <string name="error_uploading_image">Cannot upload photo, please choose another one.</string>
    <string name="signup_error">Error during signup, please try later</string>
    <string name="success_sign_up">Account is created Successfully</string>
    <string name="aiSearch">Search</string>
    <string name="aiFavorite">Favourites</string>
    <string name="aiProfile">Profile</string>
    <string name="GPS_disabled_warning_title">GPS is Disabled</string>
    <string name="GPS_disabled_warning_msg">You must allow location access to proceed using our services</string>
    <string name="yes_msg">Yes</string>
    <string name="no_msg">No</string>
    <string name="confirm_btn_dialog">Confirm</string>
    <string name="location_not_found">Cannot find your current location, Please try later</string>
    <string name="pickup_location">Your pickup location</string>
    <string name="ask_user_to_login_title">Login error</string>
    <string name="ask_user_to_login_msg">You have to login first to be able to add a review</string>
    <string name="cancel">Cancel</string>
    <string name="review_delete_title">Review delete warning</string>
    <string name="review_delete_msg">Are you sure to delete your shop review?</string>
    <string name="succes_review_deletion">Review is deleted successfully</string>
    <string name="network_timeout">Network timeout, please try later</string>
    <string name="app_share_descrption_msg">Greenbook Application</string>
    <string name="server_error">Server error, please try later</string>

    <string name="facebook_app_id">176228622930367</string>
    <string name="fb_login_protocol_scheme">fb176228622930367</string>
    <string name="unexpected_server_error">Unexpected server error, Please try later</string>
    <string name="password_change_msg">Your new password has been sent to your email</string>
</resources>
