<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:clickable="true"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/skip"
        android:fontFamily="fonts/OpenSans-Regular.ttf"
        android:textColor="@color/light_black"
        android:layout_gravity="right"
        android:layout_marginRight="18dp"
        android:layout_marginTop="11dp"
        android:textSize="17sp"
        />

    <ImageView
        android:layout_width="105dp"
        android:layout_height="164dp"
        android:layout_gravity="center"
        android:src="@drawable/green_logo"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="58dp"
        android:orientation="horizontal"
        android:layout_marginTop="37dp"
        android:layout_marginLeft="29dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="27dp"
            android:layout_height="21dp"
            android:src="@drawable/ic_envelope"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="10dp"
            android:background="#f7f7f7"/>

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:background="@android:color/transparent"
            android:textSize="18sp"
            android:fontFamily="fonts/OpenSans-Regular.ttf"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="10dp"
        android:background="#f7f7f7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="58dp"
        android:orientation="horizontal"
        android:layout_marginLeft="29dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="27dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_locked"/>

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="10dp"
            android:background="#f7f7f7"/>

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textSize="18sp"
            android:background="@android:color/transparent"
            android:fontFamily="fonts/OpenSans-Regular.ttf"
            />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginRight="18dp"
        android:layout_marginLeft="10dp"
        android:background="#f7f7f7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="58dp"
        android:orientation="horizontal"
        android:layout_marginLeft="29dp"
        android:layout_marginRight="18dp"
        android:gravity="center"
        >

        <ImageView
            android:layout_width="27dp"
            android:layout_height="21dp"
            />

        <View
            android:layout_width="2dp"
            android:layout_height="match_parent"
            android:layout_marginRight="18dp"
            android:layout_marginLeft="10dp"
            android:background="#f7f7f7"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:text="Forget Password?"
            android:textColor="@color/gray"
            android:fontFamily="fonts/OpenSans-Regular.ttf"
            android:textSize="13sp"
            />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corner_green"
        android:layout_marginLeft="27dp"
        android:layout_marginRight="35dp"
        android:layout_marginTop="52dp"
        android:gravity="center"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/login"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            />

        <View
            android:layout_width="2dp"
            android:layout_height="50dp"
            android:background="#f7f7f7"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/signup"
            android:gravity="center"
            android:layout_weight="1"
            android:textSize="18sp"
            android:textStyle="bold"
            />
    </LinearLayout>

</LinearLayout>